[metadata]
name = gemini-engine
version = 1.0.6
author = RedPenguin
author_email = timmyterskov@gmail.com
description = A monospace 2D ASCII rendering engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redpenguinyt/GeminiEngine
project_urls =
    Examples = https://github.com/redpenguinyt/GeminiExamples
    Bug Tracker = https://github.com/redpenguinyt/GeminiEngine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src